--- a/SpartanParker-iOS/SpartanParker-iOS.entitlements
+++ b/SpartanParker-iOS/SpartanParker-iOS.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.developer.in-app-payments</key>
 	<array>
-		<string></string>
+		<string>merchant.com.spartanparker.ios</string>
 	</array>
 </dict>
 </plist>
